--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,260 @@
 .App {
-  text-align: center;
+    text-align: center;
+    align-items: center;
+    color: white;
+    font-family: "Montserrat", sans-serif;
+    font-weight: light;
+    width: 100vw;
+    height: 100vh;
+    background: linear-gradient(150deg, #008060, #fbf7ed);
 }
 
 .App-logo {
-  height: 40vmin;
-  pointer-events: none;
+    height: 40vmin;
+    pointer-events: none;
 }
 
 @media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+    .App-logo {
+        animation: App-logo-spin infinite 20s linear;
+    }
 }
 
 .App-link {
-  color: #61dafb;
+    color: #61dafb;
 }
 
 @keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+    from {
+        transform: rotate(0deg);
+    }
+    to {
+        transform: rotate(360deg);
+    }
 }
+
+h1 {
+    margin: 0px;
+}
+
+.table-wrapper {
+    float: left;
+    height: 70%;
+    overflow: auto;
+    margin-left: 1%;
+}
+
+.table-wrapper::-webkit-scrollbar {
+    width: 5px;
+    height: 8px;
+    background-color: #FFFFFF;
+}
+
+.table-wrapper::-webkit-scrollbar-thumb {
+    background: #002e25;
+}
+
+.Poster {
+    text-align: center;
+}
+
+.search-bar {
+    margin: auto;
+    height: 75px;
+}
+
+table {
+    border-collapse: collapse;
+    margin: auto;
+    font-size: 0.9em;
+    font-family: sans-serif;
+    min-width: 400px;
+}
+
+thead {
+    background-color: #008060;
+    color: #ffffff;
+    text-align: center;
+    font-size: large;
+    padding-top: 5px;
+    padding-bottom: 5px;
+    width: 25%;
+}
+
+.table-head-row {
+    width: 25%;
+    font-size: 20px;
+    
+}
+
+td {
+    width: 40%;
+    max-width: 25%;
+    font-size: 20px;
+}
+
+.img__img {
+    border-radius: 10%;
+    box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
+    border-radius: 32px;
+}
+
+
+#movie-name {
+    width: 300px;
+    height: 50px;
+    box-shadow: -6px -6px 10px rgba(255, 255, 255, 0.2), 6px 6px 10px rgba(0, 0, 0, 0.1);
+    border-radius: 16px;
+    border: 0px;
+    color: #002e25;
+    font-size: 16px;
+}
+
+header {
+    text-align: center;
+    width: 100%;
+    height: auto;
+    background-size: cover;
+    position: relative;
+    overflow: hidden;
+    margin: auto;
+}
+
+header .overlay {
+    width: 100%;
+    height: 100%;
+    padding: 50px;
+    color: #FFF;
+    background-color: #002e24;
+    border-radius: 0% 0% 50% 50%;
+}
+
+/* relevant styles */
+.img__wrap {
+    position: relative;
+    border-radius: 10%;
+    border-radius: 32px;
+  }
+  
+  .img__description_layer {
+    position: absolute;
+    top: 0;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    background: rgba(0, 0, 0, 0.6);
+    color: #fff;
+    visibility: hidden;
+    opacity: 0;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+  
+    /* transition effect. not necessary */
+    transition: opacity .2s, visibility .2s;
+  }
+  
+  .img__wrap:hover .img__description_layer {
+    visibility: visible;
+    opacity: 1;
+  }
+
+  .img__wrap:hover .img__img {
+    visibility: visible;
+    opacity: 0.5;
+  }
+  
+  .img__description {
+    transition: .2s;
+    transform: translateY(1em);
+  }
+  
+  .img__wrap:hover .img__description {
+    transform: translateY(0);
+  }
+
+  .nominate-button{
+    width: 150px;
+    height: 30px;
+    box-shadow: -6px -6px 10px rgba(255, 255, 255, 0.1), 6px 6px 10px rgba(0, 0, 0, 0.1);
+    border-radius: 10px;
+    border: 0px;
+    color: #002e25;
+    font-size: 16px;
+    transition: all 0.5s;
+    cursor: pointer;
+  }
+
+  .nominate-button :hover{
+      opacity:1;
+  }
+
+  .nominate-button span {
+    cursor: pointer;
+    display: inline-block;
+    position: relative;
+    transition: 0.5s;
+  }
+  
+
+  .nominate-button span:after {
+    content: "\00bb";
+    position: absolute;
+    opacity: 0;
+    top: 0;
+    right: -20px;
+    transition: 0.5s;
+  }
+  
+  .nominate-button:hover span {
+    padding-right: 25px;
+  }
+
+  .nominate-button:hover span:after {
+    opacity: 1;
+    right: 0;
+  }
+
+  .nomination-list {
+    position: absolute;
+    display: inline-block;
+  }
+  
+  .nomination-list-content {
+    display: none;
+    position: absolute;
+    background-color: #1d1818;
+    min-width: 160px;
+    box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+    z-index: 1;
+  }
+  
+  .nomination-list:hover .nomination-list-content {
+    display: block;
+  }
+  .nominations-list-title{
+    background-color: #008060;
+    color: #ffffff;
+    text-align: center;
+    padding: 5px;
+
+  }
+  .desc {
+    padding: 15px;
+    text-align: center;
+  }
+
+  .nominations-list-items{
+    list-style-type:none;
+    padding: 0;
+    margin: 0;
+  }
+
+  .get-set-list-container{
+    margin-left: 4%;
+  }
+
+  .nomination-image{
+    width: 120px;
+    height: 153px;
+  }
